conv_app/api_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: api
  template:
    metadata:
      labels:
        components: api
    spec:
      containers:
        - name: conv-api
          image: antonlarichev/conv-api:1.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
            - name: api-data
              mountPath: /opt/app/uploads          
      volumes:
        - name: api-data
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
