conv_app/conv_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: conv
  template:
    metadata:
      labels:
        components: conv
    spec:
      containers:
        - name: conv
          image: antonlarichev/conv-service:1.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
