conv_app/api_service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-api-clusterip
spec:
  type: ClusterIP
  ports: 
    - port: 3000
      protocol: TCP
  selector:
    components: api
