conv_app/rabbitmq_service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip
spec:
  type: ClusterIP
  ports: 
    - name: admin
      port: 15672
      protocol: TCP
    - name: main
      port: 5672
      protocol: TCP
  selector:
    components: rabbitmq
